<resources>
    <string name="app_name">NUMAD23Sp_XiaoqingMeng</string>
    <string name="button_text">About me</string>
    <string name="item_name">Name</string>
    <string name="item_url">URL</string>
    <string name="Add">Add</string>
    <string name="link_add_success">Link add successfully</string>
    <string name="link_invalid">Invalid URL.</string>
    <string name="Cancel">Cancel</string>
    <string name="Http">http://</string>
    <string name="link_details">Enter Link Details</string>
    <string name="link_name">Name:</string>
    <string name="link_url">URL:</string>
    <string name="convert_name">Xiaoqing Meng</string>
    <string name="convert_email">meng.xiaoq@northeastern.edu</string>
    <string name="aboutMeName">Xiaoqing Meng</string>
    <string name="aboutMeEmail">meng.xiaoq@northeastern.edu</string>
    <string name="prime_finder">Prime Finder</string>
    <string name="find_prime">Find Prime</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="pacifier_switch">Pacifier Switch</string>
    <string name="current_number">Current number being checked:</string>
    <string name="latest_prime_found">Latest prime found:</string>
    <string name="location">Location</string>
    <string name="latitude">Current Latitude:</string>
    <string name="current_longitude">Current Longitude:</string>
    <string name="unknown">Unknown</string>
    <string name="reset">Reset</string>
    <string name="distance">Distance:</string>
</resources>